クリップボードへのコピーで解決

--- a/js/github_uri_parameter.html
+++ b/js/github_uri_parameter.html
@@ -13,8 +13,10 @@
             <p>githubにIssue起票テスト</p>
             <input id="id" value="INC0134567"></input><br>
             <textarea id="body" rows="10" cols="100">
+■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□
 クエリパラメータ付きのリリースフォームのための自動化
 https://help.github.com/ja/github/managing-your-work-on-github/about-automation-for-issues-and-pull-requests-with-query-parameters
+■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□■□
 カスタマイズされた情報で新しいリリースフォームを自動的に展開することによってリリースを素早く作成するには、リリースフォームページの URL にクエリパラメータを追加できます。
 
 ここには以下の内容があります:
@@ -26,7 +28,26 @@ https://help.github.com/ja/github/managing-your-work-on-github/about-automation-
 クエリパラメータを使うには、同等のアクションを行うための適切な権限を持っていなければなりません。 たとえば事前にリリースフォームに記入しておくには、リリースを作成する権限を持っていなければなりません。
 詳細は「リリースを作成する」を参照してください。
 
-クエリパラメータを使うのに不正なURLを作成したり、適切な権限を持っていなかったりした場合には、そのURLに対して404エラーページが返されます。Ï
+クエリパラメータを使うのに不正なURLを作成したり、適切な権限を持っていなかったりした場合には、そのURLに対して404エラーページが返されます。
+ここには以下の内容があります:
+サポートされているクエリパラメータ
+参考リンク
+クエリパラメータ    はカスタマイズ可能な URL のオプション部分で、
+クエリパラメータを使うのに不正なURLを作成したり、適切な権限を持っていなかったりした場合には、そのURLに対して404エラーページが返されます。
+ここには以下の内容があります:
+サポートされているクエリパラメータ
+参考リンク
+クエリパラメータはカスタマイズ可能な URL のオプション部分で、
+クエリパラメータを使うのに不正なURLを作成したり、適切な権限を持っていなかったりした場合には、そのURLに対して404エラーページが返されます。
+ここには以下の内容があります:
+サポートされているクエリパラメータ
+参考リンク
+クエリパラメータはカスタマイズ可能な URL のオプション部分で、
+クエリパラメータを使うのに不正なURLを作成したり、適切な権限を持っていなかったりした場合には、そのURLに対して404エラーページが返されます。
+ここには以下の内容があります:
+サポートされているクエリパラメータ
+参考リンク
+クエリパラメータはカスタマイズ可能な URL のオプション部分で、
             </textarea><br>
             <input id="submit"type="submit" value="送信"><input type="reset" value="取消">
         </div>
