クリップボード処理の確認

--- a/js/github_uri_parameter.html
+++ b/js/github_uri_parameter.html
@@ -61,6 +61,12 @@ https://help.github.com/ja/github/managing-your-work-on-github/about-automation-
         </button>
     </div>
 
+    <div>
+        <button id="copy" class="btn">
+            body to clipboard
+        </button>
+    </div>
+
 
 
 </body>
@@ -70,4 +76,3 @@ https://help.github.com/ja/github/managing-your-work-on-github/about-automation-
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script> -->
 <script src="clipboard.min.js"></script>
 <script src="./github_uri_parameter.js"></script>
-
